test/sema/traits/impl_trait_type_conformance_error.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait B {}

trait A<T : B> {
  fn foo();
}

struct S {
  // CHECK: [[# @LINE + 1]]:10: error: cannot satisfy constraint 'number : B'
  impl A<number> {
    fn foo() {}
  }
}

fn main() {}
